# ITK4-IOMINC

./: CMakeLists.txt  README.md  itk-module.cmake
include/: itkMINC2ImageIO.h  itkMINC2ImageIOFactory.h  itkMINCImageIO.h  itkMINCImageIOFactory.h
src/: CMakeLists.txt  itkMINC2ImageIO.cxx  itkMINCImageIO.cxx
test/: CMakeLists.txt  itkMINC2ImageIOTest.cxx  itkMINCImageIOTest.cxx  itkMINCImageIOTest2.cxx  itkMINCImageIOTest3.cxx
test/Input/: pd_z+_byte_cor.mnc.md5
